[gd_scene load_steps=55 format=3 uid="uid://dp05igbqaoqjq"]

[ext_resource type="Script" path="res://SRC/player_glitch.gd" id="1_7ll27"]
[ext_resource type="Resource" uid="uid://j1vocnco4nc3" path="res://resources/Defult_Play_Data.tres" id="2_813yi"]
[ext_resource type="Texture2D" uid="uid://dda8js7ldb7lx" path="res://ASSETS/Images/vfx/Effect_BloodImpact_1_60x63.png" id="3_b7veg"]
[ext_resource type="Script" path="res://SRC/Death.gd" id="4_52nmw"]
[ext_resource type="Texture2D" uid="uid://gn8s7mo4kxf7" path="res://ASSETS/Images/Player/tilemap-characters.png" id="5_4k8we"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kkxsn"]
atlas = ExtResource("3_b7veg")
region = Rect2(0, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc4ee"]
atlas = ExtResource("3_b7veg")
region = Rect2(60, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptd4l"]
atlas = ExtResource("3_b7veg")
region = Rect2(120, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_60fmo"]
atlas = ExtResource("3_b7veg")
region = Rect2(180, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_axajk"]
atlas = ExtResource("3_b7veg")
region = Rect2(240, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ghb"]
atlas = ExtResource("3_b7veg")
region = Rect2(300, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_erh6s"]
atlas = ExtResource("3_b7veg")
region = Rect2(360, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq8rw"]
atlas = ExtResource("3_b7veg")
region = Rect2(420, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_exl3w"]
atlas = ExtResource("3_b7veg")
region = Rect2(480, 0, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_30eb5"]
atlas = ExtResource("3_b7veg")
region = Rect2(0, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwny0"]
atlas = ExtResource("3_b7veg")
region = Rect2(60, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab7qa"]
atlas = ExtResource("3_b7veg")
region = Rect2(120, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfotk"]
atlas = ExtResource("3_b7veg")
region = Rect2(180, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4r2t"]
atlas = ExtResource("3_b7veg")
region = Rect2(240, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_qipif"]
atlas = ExtResource("3_b7veg")
region = Rect2(300, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y8pq"]
atlas = ExtResource("3_b7veg")
region = Rect2(360, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijhxt"]
atlas = ExtResource("3_b7veg")
region = Rect2(420, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc70i"]
atlas = ExtResource("3_b7veg")
region = Rect2(480, 63, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_pldse"]
atlas = ExtResource("3_b7veg")
region = Rect2(0, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_avpm7"]
atlas = ExtResource("3_b7veg")
region = Rect2(60, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikb86"]
atlas = ExtResource("3_b7veg")
region = Rect2(120, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks2cg"]
atlas = ExtResource("3_b7veg")
region = Rect2(180, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_71qwn"]
atlas = ExtResource("3_b7veg")
region = Rect2(240, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1vhd"]
atlas = ExtResource("3_b7veg")
region = Rect2(300, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5ft4"]
atlas = ExtResource("3_b7veg")
region = Rect2(360, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_btwsi"]
atlas = ExtResource("3_b7veg")
region = Rect2(420, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6g0"]
atlas = ExtResource("3_b7veg")
region = Rect2(480, 126, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_34s50"]
atlas = ExtResource("3_b7veg")
region = Rect2(0, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_qap4d"]
atlas = ExtResource("3_b7veg")
region = Rect2(60, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8s7l"]
atlas = ExtResource("3_b7veg")
region = Rect2(120, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6p8u"]
atlas = ExtResource("3_b7veg")
region = Rect2(180, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ptix"]
atlas = ExtResource("3_b7veg")
region = Rect2(240, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d5ri"]
atlas = ExtResource("3_b7veg")
region = Rect2(300, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_af1aj"]
atlas = ExtResource("3_b7veg")
region = Rect2(360, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8chf"]
atlas = ExtResource("3_b7veg")
region = Rect2(420, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_j86rc"]
atlas = ExtResource("3_b7veg")
region = Rect2(480, 189, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs7e"]
atlas = ExtResource("3_b7veg")
region = Rect2(300, 252, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_0itkh"]
atlas = ExtResource("3_b7veg")
region = Rect2(360, 252, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdo6s"]
atlas = ExtResource("3_b7veg")
region = Rect2(420, 252, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_spf40"]
atlas = ExtResource("3_b7veg")
region = Rect2(480, 252, 60, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyx2d"]
atlas = ExtResource("3_b7veg")
region = Rect2(120, 315, 60, 63)

[sub_resource type="SpriteFrames" id="SpriteFrames_awcfm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkxsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc4ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptd4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60fmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axajk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ghb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erh6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq8rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exl3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30eb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwny0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab7qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfotk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4r2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qipif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y8pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijhxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc70i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pldse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avpm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikb86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks2cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71qwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1vhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5ft4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btwsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34s50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qap4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8s7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6p8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ptix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d5ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af1aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8chf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j86rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0itkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdo6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spf40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyx2d")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"Restore",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3y5oy"]
atlas = ExtResource("5_4k8we")
region = Rect2(50, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1nx7"]
atlas = ExtResource("5_4k8we")
region = Rect2(75, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ggbfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y5oy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1nx7")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7h8af"]
size = Vector2(12, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejsfo"]
size = Vector2(6, 23)

[sub_resource type="Gradient" id="Gradient_ffwkx"]
offsets = PackedFloat32Array(0.311688, 0.642857, 0.876623)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cnig3"]
gradient = SubResource("Gradient_ffwkx")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player_GLitch" type="CharacterBody2D"]
position = Vector2(158, 119)
collision_layer = 2
floor_constant_speed = true
floor_snap_length = 3.0
script = ExtResource("1_7ll27")
movementData = ExtResource("2_813yi")

[node name="Player_Cam" type="Camera2D" parent="."]
position = Vector2(0, -53)
zoom = Vector2(1.7, 1.7)
position_smoothing_enabled = true
position_smoothing_speed = 15.0
rotation_smoothing_enabled = true

[node name="Death_Glitch" type="AnimatedSprite2D" parent="."]
process_mode = 3
position = Vector2(0, -48.5)
scale = Vector2(0.366667, 0.396825)
sprite_frames = SubResource("SpriteFrames_awcfm")
animation = &"Death"
script = ExtResource("4_52nmw")

[node name="Players_Sprite_glitch" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -49)
sprite_frames = SubResource("SpriteFrames_ggbfo")
animation = &"idle"

[node name="Player_area_glitch" type="CollisionShape2D" parent="."]
position = Vector2(1, -49)
shape = SubResource("RectangleShape2D_7h8af")

[node name="Coyote_jump_Timer_glitch" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hazard_detector_Glitch" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Area_detecter_Glitch" type="CollisionShape2D" parent="Hazard_detector_Glitch"]
position = Vector2(0, -49.5)
shape = SubResource("RectangleShape2D_ejsfo")

[node name="Wall_jump_Timer_Glich" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-3.99999, -52.5)
scale = Vector2(1.875, 1.29688)
energy = 0.55
texture = SubResource("GradientTexture2D_cnig3")

[connection signal="area_entered" from="Hazard_detector_Glitch" to="." method="_on_hazard_detector_area_entered"]
